# paper-digest-api-based

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_exe.ps1  build_launcher_exe.ps1  gui_launcher.py  pyproject.toml  requirements.txt  windows_gui_launcher.cs
src/paper_digest/: __init__.py  aggregator.py  api_client.py  cli.py  config.py  document_reader.py  extractor.py  folder_reports.py  gui.py  ocr.py  pdf_parser.py  prompts.py  qwen_client.py  schemas.py  utils.py
tests/: test_config.py  test_document_reader.py  test_gui_import.py  test_parser.py  test_schema.py
