[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-digest-api-based"
version = "0.1.0"
description = "Local batch document and paper analysis with OpenAI-compatible long-context APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "openai>=1.30.0",
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "tqdm>=4.66.0",
  "tenacity>=8.3.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "loguru>=0.7.2",
  "openpyxl>=3.1.2"
]

[project.scripts]
paper-digest = "paper_digest.cli:app"
paper-digest-gui = "paper_digest.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
